Cambio en una cita

--- a/index.html
+++ b/index.html
@@ -105,10 +105,13 @@
                 </ul>
               </div>
             </div>
-            <h1>Controlar la complejidad es la esencia de la programación.</h1>
-              
-            </p>
-            <i>Brian Kernigan</i>
+            <br> <br> <br>
+
+            <blockquote class="q-card q-card-color-2">
+              <div class="content">Controlar la complejidad es la esencia de la programación.</div>
+              <div class='author'>Brian Kernigan</div>
+            </blockquote>
+
           </div>
         </div>
 
